--- a/11_projeto_gerenciamentoDePessoas_rest_springBoot/personapi/pom.xml
+++ b/11_projeto_gerenciamentoDePessoas_rest_springBoot/personapi/pom.xml
@@ -15,7 +15,6 @@
 	<description>Person API Project</description>
 	<properties>
 		<java.version>11</java.version>
-
 	</properties>
 
 
@@ -48,7 +47,6 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -68,7 +66,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>1.4.2.Final</version>
+			<version>1.3.1.Final</version>
 		</dependency>
 	</dependencies>
 
@@ -81,7 +79,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -90,21 +87,14 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
-
 						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
-							<artefactId>mapstruct-processor</artefactId>
-							<version>1.4.2.Final</version>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>1.3.1.Final</version>
 						</path>
 
 					</annotationProcessorPaths>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
